--- a/IDU4.html
+++ b/IDU4.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IDU Page 4</title>
-    <link rel="Icon" type="imag/png" href="Desktop/Logo (3).png">
+    <link rel="Icon" type="imag/png" href="Logo (3).png">
     <style>
        Body{
             margin: 0;
